--- a/package.json
+++ b/package.json
@@ -29,15 +29,14 @@
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
-    "rxjs": "6.6.6",
+    "rxjs": "^7.0.0",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "peerDependencies": {
-    "rxjs": "6.x"
+    "rxjs": "7.x"
   },
-  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bjoerge/rxjs-exhaustmap-with-trailing.git"
