--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "run-p build:*",
     "build:cjs": "tsc -p tsconfig.build.json --module commonjs --outDir dist/cjs",
     "build:esm": "tsc -p tsconfig.build.json --module es2020 --outDir dist/esm",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "release": "standard-version"
   },
   "keywords": [
     "rxjs",
@@ -30,6 +31,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "rxjs": "^7.0.0",
+    "standard-version": "^9.2.0",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
